# Kget-Cloud

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .vercelignore  CLAUDE.md  LICENSE.md  NOTICE.md  README.md  commitlint.config.js  docker-compose.yml  package.json  turbo.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: agent-release.yml  cd.yml  ci.yml
apps/agent/: Cargo.toml  Cross.toml
apps/agent/src/: cli.rs  config.rs  main.rs
apps/agent/src/api/: mod.rs
apps/agent/src/download/: download_engine.rs  kget_download_engine.rs  local_file_collector.rs  mod.rs
apps/agent/src/jobs/: mod.rs
apps/agent/src/system/: mod.rs
apps/api/: Dockerfile  bunfig.toml  package.json  tsconfig.json  vercel.json
apps/api/api/: index.js
apps/api/prisma/: schema.prisma  seed.ts
apps/api/prisma/migrations/0001_enable_pgvector/: migration.sql
apps/api/prisma/migrations/0002_create_application_tables/: migration.sql
apps/api/src/: app.module.ts  configure-app.ts  main.ts  register-paths.ts
apps/api/src/test/: bun-test.d.ts  factories.ts  setup.ts
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package.json  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.lint.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/lib/: api-client.ts  auth.ts
docs/: agent-protocol.md  architecture.md  workflow.md
infra/railway/: api.railway.json  web.railway.json
memory/: 2026-05-14-1053.md  2026-05-14-1137.md  2026-05-21.md
scripts/: configure-github-ci.sh
(+56 files in other folders)
